--- a/css/style.css
+++ b/css/style.css
@@ -55,7 +55,7 @@ hr {
     margin:3px;
 }
 
-.btn {
+#btn {
     background-color:#538D4E;
     padding:10px;
     width:50px;
@@ -66,7 +66,11 @@ hr {
     transition: 0.3s;
 }
 
-.btn:hover{
+#btn:hover{
     background-color: #FFF;
     color:#538D4E;
+}
+
+#p2 {
+    display: none;
 }
